--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     >
       <img
         class="project-image"
-        src="./asf.PNG"
+        src="./calculator.PNG"
         alt="project"
       />
       <p class="project-title">
