--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>personalPortifolio</title>
+    /* CSS link here.. */
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -21,7 +22,7 @@
   href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap"
   rel="stylesheet"
 />
-<!-- START NAV -->
+<!-- START NAV  BAR-->
 
 <nav id="navbar" class="nav">
   <ul class="nav-list">
